--- a/index.html
+++ b/index.html
@@ -4,12 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Andrea Vaughan</title>
     <link rel="stylesheet" href="styles.css">
     <script src="script.js" defer></script>
 </head>
 <body>
-    <h1>Heading</h1>
     <div id="root"></div>
+    <div id="about">
+        <h2>About</h2>
+    </div>
+    <div id="bio">
+        <h2>Bio</h2>
+    </div>
 </body>
 </html>
